--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- SEO Meta Tags -->
+    <!-- SEO Meta Tags ASEO -->
     <title>MASE | AI Consulting & Digital Transformation | Future-Proof Your Enterprise</title>
     <meta name="description" content="Enterprise AI consulting for digital transformation. We help companies build AI infrastructure that makes them competitive and resilient in the age of automation. Book your AI strategy session.">
     <meta name="keywords" content="AI consulting, digital transformation, enterprise AI strategy, business modernization, AI implementation, future-proof business, AI infrastructure, competitive advantage AI">
