Update call-to-action and service tags in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 The companies that thrive in the next decade will be the ones that <strong>build AI into their core infrastructure today.</strong> We help you make that transition—strategically, systematically, and ahead of your competition.
             </p>
             <div class="mt-10">
-                <a href="#section-contact" class="cta-button">Start Your Transformation</a>
+                <a href="#section-contact" class="cta-button">Start</a>
             </div>
             <div class="mt-12 text-xs text-gray-500 font-mono animate-pulse">SCROLL TO EXPLORE ↓</div>
         </div>
@@ -125,7 +125,7 @@
                     Most companies know they need to "do something with AI." But without a clear architecture and strategy, they end up with disconnected tools, pilot projects that never scale, and an organization that's no more capable than before.
                 </p>
                 <div class="flex items-center gap-4 text-xs font-mono text-red-400 border-t border-white/10 pt-4 mt-6">
-                    <span>⚠ FRAGMENTED TOOLS • NO UNIFIED STRATEGY • FALLING BEHIND</span>
+                    <span>⚠ LEGACY DATA • NO UNIFIED STRATEGY • FALLING BEHIND</span>
                 </div>
             </div>
         </div>
@@ -144,6 +144,8 @@
                     Our process starts with understanding your business deeply: where you are, where you're going, and what capabilities will make you untouchable in your market. Then we design and implement the systems to get you there.
                 </p>
                 <div class="flex flex-wrap">
+                    <span class="service-tag">Proprietary AI Diagnostics</span>\
+                    <span class="service-tag">Bottleneck Detection</span>
                     <span class="service-tag">Strategic Assessment</span>
                     <span class="service-tag">Architecture Design</span>
                     <span class="service-tag">AI Integration</span>
