Update company name and service tags in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     Our process starts with understanding your business deeply: where you are, where you're going, and what capabilities will make you untouchable in your market. Then we design and implement the systems to get you there.
                 </p>
                 <div class="flex flex-wrap">
-                    <span class="service-tag">Proprietary AI Diagnostics</span>\
+                    <span class="service-tag">Proprietary AI Diagnostics</span>
                     <span class="service-tag">Bottleneck Detection</span>
                     <span class="service-tag">Strategic Assessment</span>
                     <span class="service-tag">Architecture Design</span>
@@ -207,8 +207,8 @@
                     <button type="button" class="w-full cta-button mt-4">Book Strategy Session</button>
                 </form>
                 <div class="mt-8 pt-6 border-t border-white/10 flex justify-between text-xs text-gray-500 font-mono">
-                    <div>MASON CHAMBERS LLC</div>
-                    <div>🔒 SECURE</div>
+                    <div>MASE LLC</div>
+                    <div>SECURE</div>
                 </div>
             </div>
         </div>
